--- a/Blocky/Blocky.csproj
+++ b/Blocky/Blocky.csproj
@@ -8,6 +8,8 @@
         <UseWPF>true</UseWPF>
         <LangVersion>default</LangVersion>
         <ApplicationIcon>productivity-blocker-icon.ico</ApplicationIcon>
+        <AssemblyVersion>0.1.0.0</AssemblyVersion>
+        <FileVersion>0.1.0.0</FileVersion>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
