--- a/Blocky/appSettings.json
+++ b/Blocky/appSettings.json
@@ -17,7 +17,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "BulletLight.TaskRunner-.log",
+          "path": "%LocalAppData%\\Blocky\\logs\\Blocky-.log",
           "rollingInterval": "Day",
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} {Level:u3} [T:{ThreadId}] [{SourceContext}] {Message:lj}{NewLine}{Exception}"
         }
