--- a/extensions/chrome/manifest.json
+++ b/extensions/chrome/manifest.json
@@ -1,13 +1,16 @@
 {
   "manifest_version": 3,
   "name": "Blocky Chrome Extension",
-  "version": "0.1",
+  "version": "0.2",
   "description": "Blocks distracting websites",
+  "icons": {
+    "16": "icons/icon_16x16.png",
+    "48": "icons/icon_48x48.png",
+    "128": "icons/icon_128x128.png"
+  },
   "permissions": [
     "declarativeNetRequest",
-    "declarativeNetRequestWithHostAccess",
-    "webRequest",
-    "storage"
+    "declarativeNetRequestWithHostAccess"
   ],
   "host_permissions": [
     "<all_urls>"
@@ -15,7 +18,19 @@
   "background": {
     "service_worker": "background.js"
   },
+  "declarative_net_request": {
+    "rule_resources": []
+  },
+  "web_accessible_resources": [{
+    "resources": ["blocked.html"],
+    "matches": ["<all_urls>"]
+  }],
   "action": {
-    "default_title": "Blocky"
+    "default_title": "Blocky is active",
+    "default_icon": {
+      "16": "icons/icon_16x16.png",
+      "48": "icons/icon_48x48.png",
+      "128": "icons/icon_128x128.png"
+    }
   }
 }
